[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assests/images/menusuperiorizsintext.png" type="Texture" id=1]
[ext_resource path="res://Assests/images/menusuperiordersintext (1).png" type="Texture" id=2]
[ext_resource path="res://HUD.gd" type="Script" id=3]
[ext_resource path="res://Assests/Fonts/2885-font.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 936.0
margin_right = 1278.0
margin_bottom = 270.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="TextureRect2"]
margin_left = 16.0
margin_top = 96.0
margin_right = 330.0
margin_bottom = 236.0
custom_colors/font_color = Color( 0.203922, 0.627451, 0.643137, 1 )
custom_fonts/font = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 821.0
margin_bottom = 141.0
texture = ExtResource( 1 )

[node name="RemainingTime" type="Label" parent="TextureRect"]
margin_left = 32.0
margin_top = 62.0
margin_right = 176.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0.203922, 0.627451, 0.643137, 1 )
custom_fonts/font = SubResource( 2 )
align = 1

[node name="GrowingCm" type="Label" parent="TextureRect"]
margin_left = 244.0
margin_top = 62.0
margin_right = 396.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0.203922, 0.627451, 0.643137, 1 )
custom_fonts/font = SubResource( 3 )
align = 1

[node name="PowerUpsCollected" type="Label" parent="TextureRect"]
margin_left = 466.0
margin_top = 62.0
margin_right = 646.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0.203922, 0.627451, 0.643137, 1 )
custom_fonts/font = SubResource( 4 )
align = 1

[node name="ActiveRoots" type="Label" parent="TextureRect"]
margin_left = 704.0
margin_top = 62.0
margin_right = 800.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0.203922, 0.627451, 0.643137, 1 )
custom_fonts/font = SubResource( 5 )
align = 1
